--- a/configurator_src/windows/BFAOS/BFAOS/BFAOS.csproj
+++ b/configurator_src/windows/BFAOS/BFAOS/BFAOS.csproj
@@ -75,5 +75,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ContentPanels\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
