--- a/configurator_src/windows/BFAOS/BFAOS/BFAOS.csproj
+++ b/configurator_src/windows/BFAOS/BFAOS/BFAOS.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>BFAOS-App-Icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -77,6 +80,15 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ContentPanels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="BFAOS-App-Icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BFAOSToolCore\BFAOSToolCore.csproj">
+      <Project>{5f79546b-ca91-41bf-a7fd-455f8cc66bbf}</Project>
+      <Name>BFAOSToolCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
