--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 configurator_src/windows/BFAOS/BFAOS/bin
 configurator_src/windows/BFAOS/BFAOS/obj
 configurator_src/windows/BFAOS/.vs
+configurator_src/windows/BFAOSToolCore/bin
+configurator_src/windows/BFAOSToolCore/obj
 test_
