Added config reader

--- a/configurator_src/windows/BFAOS/BFAOS/BFAOS.csproj
+++ b/configurator_src/windows/BFAOS/BFAOS/BFAOS.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContentPanels\MainCP.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ContentPanels\MainCP.Designer.cs">
+      <DependentUpon>MainCP.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainUI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,6 +61,9 @@
     </Compile>
     <Compile Include="BFAOSInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ContentPanels\MainCP.resx">
+      <DependentUpon>MainCP.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainUI.resx">
       <DependentUpon>MainUI.cs</DependentUpon>
     </EmbeddedResource>
@@ -78,9 +87,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ContentPanels\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="BFAOS-App-Icon.ico" />
   </ItemGroup>
