Added Main content panel

--- a/configurator_src/windows/BFAOS/BFAOS/BFAOS.csproj
+++ b/configurator_src/windows/BFAOS/BFAOS/BFAOS.csproj
@@ -99,6 +99,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="BFAOS-App-Icon.ico" />
+    <None Include="Resources\logo.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BFAOSToolCore\BFAOSToolCore.csproj">
